customers-openapi/deploy/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: swagger-ui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        editor: vscode
    spec:
      containers:
      - name: swagger-ui
        image: swaggerui
