customers-openapi/deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: swagger-ui
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "inretail-tpo-challenge-ip"
  labels:
    app: swagger-ui
    tier: backend
spec:
  rules:
  - http:
      paths:
      - path: /open-api/*
        backend:
          serviceName: swagger-ui
          servicePort: 80
